# modern-rag-app

./: .env  .env.example  .gitignore  README.md  SYSTEM_COMPLETE.md  demo_complete_system.py  demo_intelligent_retriever.py  demo_query_analyzer.py  demo_streaming.py  pyproject.toml  requirements.txt
api/v1/: endpoints.py
config/: __init__.py  logging_config.py  settings.py
core/: __init__.py  exceptions.py
docs/: MASTER_ROADMAP.md  OFFLINE_DEPLOYMENT_CHECKLIST.md  PHASE_3_3D_COMPREHENSIVE_OVERVIEW.md  README.md  STREAMING_FEATURES.md  WINDOWS_OFFLINE_SETUP_GUIDE.md  architecture.md  configuration.md
docs/api/: README.md  authentication.md  endpoints.md  websockets.md
docs/config/: logging_config.md  settings.md
docs/core/: exception_handling.md
docs/models/: query_models.md  retrieval_models.md
docs/processing/: ocr_processor.md  pdf_processor.md  phase_3_1_status.md  phase_3_2_status.md  phase_3_3_implementation_status.md  phase_3_3c_query_analysis_plan.md  phase_3_3d_intelligent_retrieval_plan.md
docs/services/: chunking_service.md  document_analyzer.md  embedding_service.md  enhanced_chunking_service.md  intelligent_retriever.md  intelligent_summarizer.md  query_analyzer.md  rag_orchestrator.md  text_processor.md
docs/storage/: README.md  chroma_store.md  vector_store.md
docs/testing/: README.md  integration.md  integration_testing_plan.md
models/: __init__.py  query_models.py  retrieval_models.py
offline_setup_automation/: README.md  config.py  download_ai_models.py  download_installers.py  download_python_deps.py
offline_setup_automation/offline_python_package_builder/: README.md  download_python_deps.py  requirements_offline.txt
processing/: __init__.py  ocr_processor.py  pdf_processor.py
services/: __init__.py  chunking_service.py  document_analyzer.py  embedding_service.py  intelligent_retriever.py  intelligent_summarizer.py  query_analyzer.py  rag_orchestrator.py  text_processor.py
storage/: __init__.py  chroma_store.py  vector_store.py
(+8 files in other folders)
